# fuck-webp

./: CHANGELOG.md  config.json  fuck-webp.cabal  readme.md
app/: Main.hs
