cabal-version:      2.4
name:               fuck-webp
version:            0.1.0.0

synopsis: Fuck webp

description: executable to automatically convert from webp to png, or other user specified formats

bug-reports: s3np41@discord


license:            MIT
author:             S3NP41-v
maintainer:         s3np41v@gmail.com

category:           tool
extra-source-files: CHANGELOG.md

executable fuck-webp
    main-is:          Main.hs

    hs-source-dirs:   app
    default-language: Haskell2010
    
    build-depends:    base ^>=4.16.4.0
                    , directory
                    , text
                    , bytestring
                    , process
                    , aeson >=1.5 && <1.6 || >=2.0 && <2.2
